content/_generated-doc/2.7/config/quarkus-kubernetes-config-group-host-alias-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-host-alias-config_configuration]]link:#quarkus-kubernetes-config-group-host-alias-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-host-alias-config_quarkus.knative.host-aliases.-host-aliases-.ip]]`link:#quarkus-kubernetes-config-group-host-alias-config_quarkus.knative.host-aliases.-host-aliases-.ip[quarkus.knative.host-aliases."host-aliases".ip]`

[.description]
--
The ip address
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-host-alias-config_quarkus.knative.host-aliases.-host-aliases-.hostnames]]`link:#quarkus-kubernetes-config-group-host-alias-config_quarkus.knative.host-aliases.-host-aliases-.hostnames[quarkus.knative.host-aliases."host-aliases".hostnames]`

[.description]
--
The hostnames to resolve to the ip
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-host-alias-config_quarkus.kubernetes.hostaliases.-host-aliases-.ip]]`link:#quarkus-kubernetes-config-group-host-alias-config_quarkus.kubernetes.hostaliases.-host-aliases-.ip[quarkus.kubernetes.hostaliases."host-aliases".ip]`

[.description]
--
The ip address
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-host-alias-config_quarkus.kubernetes.hostaliases.-host-aliases-.hostnames]]`link:#quarkus-kubernetes-config-group-host-alias-config_quarkus.kubernetes.hostaliases.-host-aliases-.hostnames[quarkus.kubernetes.hostaliases."host-aliases".hostnames]`

[.description]
--
The hostnames to resolve to the ip
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-host-alias-config_quarkus.openshift.host-aliases.-host-aliases-.ip]]`link:#quarkus-kubernetes-config-group-host-alias-config_quarkus.openshift.host-aliases.-host-aliases-.ip[quarkus.openshift.host-aliases."host-aliases".ip]`

[.description]
--
The ip address
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-host-alias-config_quarkus.openshift.host-aliases.-host-aliases-.hostnames]]`link:#quarkus-kubernetes-config-group-host-alias-config_quarkus.openshift.host-aliases.-host-aliases-.hostnames[quarkus.openshift.host-aliases."host-aliases".hostnames]`

[.description]
--
The hostnames to resolve to the ip
--|list of string 
|

|===