content/_generated-doc/3.2/config/quarkus-kubernetes-config-group-host-alias-config.adoc

:summaryTableId: quarkus-kubernetes-config-group-host-alias-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-host-alias-config_configuration]]link:#quarkus-kubernetes-config-group-host-alias-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-host-alias-config_quarkus-knative-host-aliases-host-aliases-ip]]`link:#quarkus-kubernetes-config-group-host-alias-config_quarkus-knative-host-aliases-host-aliases-ip[quarkus.knative.host-aliases."host-aliases".ip]`


[.description]
--
The ip address

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_HOST_ALIASES__HOST_ALIASES__IP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_HOST_ALIASES__HOST_ALIASES__IP+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-host-alias-config_quarkus-knative-host-aliases-host-aliases-hostnames]]`link:#quarkus-kubernetes-config-group-host-alias-config_quarkus-knative-host-aliases-host-aliases-hostnames[quarkus.knative.host-aliases."host-aliases".hostnames]`


[.description]
--
The hostnames to resolve to the ip

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_HOST_ALIASES__HOST_ALIASES__HOSTNAMES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_HOST_ALIASES__HOST_ALIASES__HOSTNAMES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-host-alias-config_quarkus-kubernetes-hostaliases-host-aliases-ip]]`link:#quarkus-kubernetes-config-group-host-alias-config_quarkus-kubernetes-hostaliases-host-aliases-ip[quarkus.kubernetes.hostaliases."host-aliases".ip]`


[.description]
--
The ip address

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_HOSTALIASES__HOST_ALIASES__IP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_HOSTALIASES__HOST_ALIASES__IP+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-host-alias-config_quarkus-kubernetes-hostaliases-host-aliases-hostnames]]`link:#quarkus-kubernetes-config-group-host-alias-config_quarkus-kubernetes-hostaliases-host-aliases-hostnames[quarkus.kubernetes.hostaliases."host-aliases".hostnames]`


[.description]
--
The hostnames to resolve to the ip

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_HOSTALIASES__HOST_ALIASES__HOSTNAMES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_HOSTALIASES__HOST_ALIASES__HOSTNAMES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-host-alias-config_quarkus-openshift-host-aliases-host-aliases-ip]]`link:#quarkus-kubernetes-config-group-host-alias-config_quarkus-openshift-host-aliases-host-aliases-ip[quarkus.openshift.host-aliases."host-aliases".ip]`


[.description]
--
The ip address

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_HOST_ALIASES__HOST_ALIASES__IP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_HOST_ALIASES__HOST_ALIASES__IP+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-host-alias-config_quarkus-openshift-host-aliases-host-aliases-hostnames]]`link:#quarkus-kubernetes-config-group-host-alias-config_quarkus-openshift-host-aliases-host-aliases-hostnames[quarkus.openshift.host-aliases."host-aliases".hostnames]`


[.description]
--
The hostnames to resolve to the ip

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_HOST_ALIASES__HOST_ALIASES__HOSTNAMES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_HOST_ALIASES__HOST_ALIASES__HOSTNAMES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|

|===